bench(decisions): rewrite the notes, starting with what the first pass got wrong
Every ad-hoc harness here was written without warmup, and unwarmed Panama vector
code takes a different path with a different accumulation order. So the first pass
compared two code paths and measured which one the compiler reached first. It
produced a confident wrong diagnosis: two identical calls differing on all 248,320
logits, which reads exactly like a state leak between sessions. At warmup 3 every one
of those comparisons is 0.000e+00. There is no determinism bug and no state leak, and
the tell was in the first run -- the ten repeats agreed, because warmup had happened
by then. This project's working agreement already records this failure mode from a
previous sweep. Section 0 now says so before any number.

Every harness warms each path it compares, Determinism.java exists to check the
premise, and REPRODUCE.md makes warmup part of the procedure rather than a detail.

The bench harness was never affected: it warms three items and discards them, and
re-run at 25 its probabilities are byte-identical. Every accuracy number is
warmup-clean. Two figures are withdrawn -- the "alone" column of Split and the answer
drift of Batch2 -- and everything re-measured warmed on a fresh dedicated host.

What survived: prefill compute bound at 18.5 ms/token saturating on four physical
cores; splitting a prefill bit-identical in both kernels; the native kernel's one-row
path differing from its many-row path; grouping a wash at best and 0.07 of
probability off; options-first 1.76x and eight noise floors down on accuracy.

What is new: a noise floor to read the rest against -- swapping the recurrence kernel
across all 24 layers moves one item in 120 and one point of Intelligence -- and the
rubric gap, sixteen floors wide, now closed to two.